Changes for 2.2.10rc2

New features:

Bug fixes:
........S. [ZBX-9703] fixed a memory leak in SSH checks when configured public and/or private key is not a regular file (Sandis)

--------------------------------------------------------------------------------
Changes for 2.2.10rc1

New features:
A.F....... [ZBX-1357] enabled Czech locale to be displayed by default (Richlv)
...G...PS. [ZBXNEXT-786] made net.tcp.service[ntp] item work over UDP (asaveljevs)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, French, Japanese, Polish and Spanish translations; thanks to Zabbix translators (Richlv)
.....J.... [ZBX-8839] added timeout configuration option to Java gateway (asaveljevs)

Bug fixes:
...G...... [ZBX-9605] fixed an issue with start lines and end lines in vfs.file.regexp[] and vfs.file.regmatch[] (Gleb)
..F....... [ZBX-9332] fixed correct display of green circle in maps and showing more unacknowledged problems than total number of problems (Ivo)
..F....... [ZBX-8895] improved trigger count calculation and removed unnecessary query, thanks to Alexey Pustovalov (Krists)
..F....... [ZBX-9381] removed 'groupid' parameter from global search URLs sometimes causing inaccessible forms due to insufficient permissions (Ivo)
........S. [ZBX-9623] fixed possible SQL error when network discovery rule and LLD rule are processed at the same time (dimir)
........S. [ZBX-8949] fixed possible deadlocks when deleting items on systems with MySQL backend (wiper)
...G...... [ZBX-8969] fixed "system.uname" and "system.sw.arch" returning bad values on HP-UX (asaveljevs, wiper)
...G...... [ZBX-9592] fixed possible crash due to uninitialized counterpath variable (igors)
...G...... [ZBX-9290] fixed log file reloading if its size is updated later than modification time (igors)
...G...... [ZBX-9456] fixed sustem.cpu.util item to work correctly on OpenBSD 5.7 (igors)