@@ -4,6 +4,7 @@ New features:
 
 Bug fixes:
 ........S. [ZBX-9703] fixed a memory leak in SSH checks when configured public and/or private key is not a regular file (Sandis)
+..F....... [ZBX-9381] fixed empty host list in popup drowpdowns (Ivo)
 
 --------------------------------------------------------------------------------
 Changes for 2.2.10rc1
